<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ProgressBar
        android:id="@+id/progressbar_demo"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:max="100"
        android:progress="50"
        android:secondaryProgress="80"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/progressbar_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add" />

    <Button
        android:id="@+id/progressbar_reduce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reduce" />

    <Button
        android:id="@+id/progressbar_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset" />

</LinearLayout>
